changed the background-attachment to fixed for larger screens in hope that the images wont be stretched on iOS

--- a/public/css/stylish-portfolio.css
+++ b/public/css/stylish-portfolio.css
@@ -171,7 +171,7 @@ hr.small {
     width: 100%;
     height: 100vh;
     max-height: 100%;
-    background: url(../img/wun2freeheader.png) no-repeat center center fixed;
+    background: url(../img/wun2freeheader.png) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -180,12 +180,12 @@ hr.small {
   
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (min-width: 768px) {
   .header .callout {
-    -webkit-background-attachment: scroll;
-    -moz-background-attachment: scroll;
-    -o-background-attachment: scroll;
-    background-attachment: scroll;
+    -webkit-background-attachment: fixed;
+    -moz-background-attachment: fixed;
+    -o-background-attachment: fixed;
+    background-attachment: fixed;
     } 
     
     
@@ -217,7 +217,7 @@ hr.small {
     height: 40vh;
     max-height: 40%;
     color: #fff;
-    background: url(../img/2nd-banner.jpg) no-repeat center center fixed;
+    background: url(../img/2nd-banner.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
